--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox Sales Dashboard</title>
+    <title>Roblox UGC Sales Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="dashboard">
-        <h1>Roblox Sales Dashboard</h1>
+        <h1>Roblox UGC Sales Dashboard</h1>
         <div class="stats">
             <div class="stat-item">
                 <h2>Total Revenue: <span id="total-revenue">$0</span></h2>
@@ -18,8 +18,12 @@
                 <h2>Total Units Sold: <span id="total-units">0</span></h2>
             </div>
         </div>
-        <canvas id="revenueChart"></canvas>
-        <canvas id="unitsChart"></canvas>
+
+        <!-- Horizontal Scrollable Section -->
+        <div class="scroll-container">
+            <canvas id="revenueChart"></canvas>
+            <canvas id="unitsChart"></canvas>
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
