Combined all pages into one index.html with login functionality

--- a/index.html
+++ b/index.html
@@ -3,85 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox UGC Sales Dashboard</title>
+    <title>Roblox UGC Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <div class="dashboard">
-        <aside class="sidebar">
-            <div class="logo">
-                <h2>Ui Art</h2>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#"><img src="icons/home.png" alt="Home"> Dashboard</a></li>
-                    <li><a href="#"><img src="icons/sales.png" alt="Sales"> Sales</a></li>
-                    <li><a href="#"><img src="icons/profile.png" alt="Profile"> Profile</a></li>
-                    <li><a href="#"><img src="icons/settings.png" alt="Settings"> Settings</a></li>
-                </ul>
-            </nav>
-        </aside>
-        <main class="content">
-            <header>
-                <div class="header-left">
-                    <h1>Sales Dashboard</h1>
-                </div>
-                <div class="header-right">
-                    <div class="user-info">
-                        <span class="username">John Doe</span>
-                        <img src="icons/user.png" alt="User">
-                    </div>
-                </div>
-            </header>
-            <section class="stats-section">
-                <div class="stats-item">
-                    <h2>Product Sales</h2>
-                    <p id="product-sales">$983,080</p>
-                    <canvas id="productSalesChart"></canvas>
-                </div>
-                <div class="stats-item">
-                    <h2>Total Revenue</h2>
-                    <p id="total-revenue">$983,080</p>
-                    <canvas id="revenueChart"></canvas>
-                </div>
-                <div class="stats-item">
-                    <h2>Total Profit</h2>
-                    <p id="total-profit">$715,803</p>
-                    <canvas id="profitChart"></canvas>
-                </div>
-            </section>
-            <section class="details-section">
-                <div class="transaction-history">
-                    <h2>Transaction History</h2>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Date</th>
-                                <th>Price</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody id="transaction-history-body">
-                            <!-- Transaction rows will be dynamically added here -->
-                        </tbody>
-                    </table>
-                </div>
-                <div class="charts-container">
-                    <div class="chart-item">
-                        <h2>Sale Status</h2>
-                        <canvas id="saleStatusChart"></canvas>
-                    </div>
-                    <div class="chart-item">
-                        <h2>Daily Sale</h2>
-                        <canvas id="dailySaleChart"></canvas>
-                    </div>
-                </div>
-            </section>
-        </main>
+    <!-- Login Section -->
+    <div id="login-section" class="page-section">
+        <div class="login-container">
+            <h1>Login to Roblox UGC Dashboard</h1>
+            <form id="loginForm">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Login</button>
+                <p id="login-error" style="color: red; display: none;">Invalid credentials</p>
+            </form>
+        </div>
     </div>
+
+    <!-- Dashboard Section -->
+    <div id="dashboard-section" class="page-section" style="display:none;">
+        <div class="dashboard">
+            <aside class="sidebar">
+                <div class="logo">
+                    <h2>Ui Art</h2>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#" id="show-dashboard"><img src="assets/icons/home.png" alt="Home" class="icon"> Dashboard</a></li>
+                        <li><a href="#" id="show-settings"><img src="assets/icons/settings.png" alt="Settings" class="icon"> Settings</a></li>
+                        <li><a href="#" id="logout"><img src="assets/icons/logout.png" alt="Logout" class="icon"> Logout</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <main class="content">
+                <header>
+                    <div class="header-left">
+                        <h1>Sales Dashboard</h1>
+                    </div>
+                    <div class="header-right">
+                        <div class="user-info">
+                            <span class="username">John Doe</span>
+                            <img src="assets/icons/user.png" alt="User" class="icon">
+                        </div>
+                    </div>
+                </header>
+                <section class="stats-section">
+                    <div class="stats-item">
+                        <h2>Product Sales</h2>
+                        <p id="product-sales">0</p>
+                        <canvas id="productSalesChart"></canvas>
+                    </div>
+                    <div class="stats-item">
+                        <h2>Total Revenue</h2>
+                        <p id="total-revenue">0</p>
+                        <canvas id="revenueChart"></canvas>
+                    </div>
+                    <div class="stats-item">
+                        <h2>Total Profit (Robux)</h2>
+                        <p id="total-profit">0</p>
+                        <canvas id="profitChart"></canvas>
+                    </div>
+                </section>
+            </main>
+        </div>
+    </div>
+
+    <!-- Settings Section -->
+    <div id="settings-section" class="page-section" style="display:none;">
+        <div class="dashboard">
+            <aside class="sidebar">
+                <div class="logo">
+                    <h2>Ui Art</h2>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#" id="show-dashboard-from-settings"><img src="assets/icons/home.png" alt="Home" class="icon"> Dashboard</a></li>
+                        <li><a href="#" id="logout-from-settings"><img src="assets/icons/logout.png" alt="Logout" class="icon"> Logout</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <main class="content">
+                <header>
+                    <div class="header-left">
+                        <h1>Settings</h1>
+                    </div>
+                </header>
+                <section class="settings-content">
+                    <p>Settings page content goes here...</p>
+                </section>
+            </main>
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
